cmake_minimum_required(VERSION 3.6)
project(esercizi_26_10_16)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(BUILD_1 main)
#set(SOURCE_FILES main.c)
#add_executable(esercizi_26_10_16 ${SOURCE_FILES})

set(BUILD_1 es1)
set(SOURCE_FILES_2 es1.c)
add_executable(esercizi_26_10_16 ${SOURCE_FILES_2})